--- a/index.html
+++ b/index.html
@@ -59,18 +59,6 @@
       border-radius: 0 5px 5px 5px;
       margin-top: -1px;
     }
-    .carousel {
-      display: flex;
-      overflow-x: auto;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-    .carousel img {
-      width: 100%;
-      max-width: 300px;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.2);
-    }
     table {
       width: 100%;
       border-collapse: collapse;
@@ -84,30 +72,24 @@
     th {
       background-color: #f4f4f4;
     }
-    .slideshow-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2rem;
-      margin-top: 2rem;
-    }
     .slideshow-container {
       position: relative;
       background: #f9f9f9;
-      height: 260px;
-      width: 260px;
+      height: 300px;
+      width: 100%;
       padding: 1rem;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
+      margin-top: 2rem;
     }
     .slide-img {
       display: none;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
       border-radius: 8px;
     }
     .slide-img.active {
@@ -125,8 +107,8 @@
       z-index: 2;
       color: #333;
     }
-    .arrow.left { left: 0; }
-    .arrow.right { right: 0; }
+    .arrow.left { left: 10px; }
+    .arrow.right { right: 10px; }
   </style>
 </head>
 <body>
@@ -168,37 +150,39 @@
       </table>
       <hr>
       <h2>📸 Lab Screenshots</h2>
-      <div class="slideshow-grid">
-        <div class="slideshow-container">
-          <h3>Active Directory</h3>
+      <div class="tabs">
+        <button class="tab-btn active" onclick="showSlideshow('ad', event)">AD Server</button>
+        <button class="tab-btn" onclick="showSlideshow('pf', event)">pfSense</button>
+        <button class="tab-btn" onclick="showSlideshow('client', event)">Windows Client</button>
+        <button class="tab-btn" onclick="showSlideshow('web', event)">Web Server</button>
+        <button class="tab-btn" onclick="showSlideshow('file', event)">File Server</button>
+      </div>
+      <div id="slideshows">
+        <div class="slideshow-container" id="ad">
           <button class="arrow left" onclick="changeSlide(0, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(0, 1)">&#10095;</button>
           <img src="ADVMinfo.png" class="slide-img slide-0 active">
           <img src="ad2.png" class="slide-img slide-0">
         </div>
-        <div class="slideshow-container">
-          <h3>pfSense</h3>
+        <div class="slideshow-container" id="pf" style="display:none">
           <button class="arrow left" onclick="changeSlide(1, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(1, 1)">&#10095;</button>
           <img src="pf1.png" class="slide-img slide-1 active">
           <img src="pf2.png" class="slide-img slide-1">
         </div>
-        <div class="slideshow-container">
-          <h3>Windows Client</h3>
+        <div class="slideshow-container" id="client" style="display:none">
           <button class="arrow left" onclick="changeSlide(2, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(2, 1)">&#10095;</button>
           <img src="client1.png" class="slide-img slide-2 active">
           <img src="client2.png" class="slide-img slide-2">
         </div>
-        <div class="slideshow-container">
-          <h3>Web Server</h3>
+        <div class="slideshow-container" id="web" style="display:none">
           <button class="arrow left" onclick="changeSlide(3, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(3, 1)">&#10095;</button>
           <img src="web1.png" class="slide-img slide-3 active">
           <img src="web2.png" class="slide-img slide-3">
         </div>
-        <div class="slideshow-container">
-          <h3>File Server</h3>
+        <div class="slideshow-container" id="file" style="display:none">
           <button class="arrow left" onclick="changeSlide(4, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(4, 1)">&#10095;</button>
           <img src="file1.png" class="slide-img slide-4 active">
@@ -221,12 +205,22 @@
   <script>
     function showTab(id, event) {
       const tabs = document.querySelectorAll('.tab-content');
-      const buttons = document.querySelectorAll('.tab-btn');
+      const buttons = document.querySelectorAll('.tabs:first-of-type .tab-btn');
       tabs.forEach(tab => tab.style.display = 'none');
       document.getElementById(id).style.display = 'block';
       buttons.forEach(btn => btn.classList.remove('active'));
       event.target.classList.add('active');
     }
+
+    function showSlideshow(id, event) {
+      const sections = document.querySelectorAll('#slideshows > .slideshow-container');
+      const buttons = document.querySelectorAll('.tabs:last-of-type .tab-btn');
+      sections.forEach(s => s.style.display = 'none');
+      document.getElementById(id).style.display = 'flex';
+      buttons.forEach(btn => btn.classList.remove('active'));
+      event.target.classList.add('active');
+    }
+
     const current = [0, 0, 0, 0, 0];
     function changeSlide(group, direction) {
       const imgs = document.querySelectorAll(`.slide-${group}`);
