--- a/index.html
+++ b/index.html
@@ -125,30 +125,35 @@
         <img src="images/DNSManager.png" class="slide-img slide-0">
         <img src="images/ad2.png" class="slide-img slide-0">
         <button class="arrow right" onclick="changeSlide(0, 1)">&#10095;</button>
+        <div class="caption" id="caption-0"></div>
       </div>
       <div class="slideshow-container">
         <button class="arrow left" onclick="changeSlide(1, -1)">&#10094;</button>
         <img src="images/pf1.png" class="slide-img slide-1 active">
         <img src="images/pf2.png" class="slide-img slide-1">
         <button class="arrow right" onclick="changeSlide(1, 1)">&#10095;</button>
+        <div class="caption" id="caption-1"></div>
       </div>
       <div class="slideshow-container">
         <button class="arrow left" onclick="changeSlide(2, -1)">&#10094;</button>
         <img src="images/client1.png" class="slide-img slide-2 active">
         <img src="images/client2.png" class="slide-img slide-2">
         <button class="arrow right" onclick="changeSlide(2, 1)">&#10095;</button>
+        <div class="caption" id="caption-2"></div>
       </div>
       <div class="slideshow-container">
         <button class="arrow left" onclick="changeSlide(3, -1)">&#10094;</button>
         <img src="images/web1.png" class="slide-img slide-3 active">
         <img src="images/web2.png" class="slide-img slide-3">
         <button class="arrow right" onclick="changeSlide(3, 1)">&#10095;</button>
+        <div class="caption" id="caption-3"></div>
       </div>
       <div class="slideshow-container">
         <button class="arrow left" onclick="changeSlide(4, -1)">&#10094;</button>
         <img src="images/file1.png" class="slide-img slide-4 active">
         <img src="images/file2.png" class="slide-img slide-4">
         <button class="arrow right" onclick="changeSlide(4, 1)">&#10095;</button>
+        <div class="caption" id="caption-4"></div>
       </div>
     </div>
   </main>
@@ -165,12 +170,19 @@
       Array.from(document.getElementsByClassName('slide-4'))
     ];
 
-    const captions = [
-      "VM setup in Oracle VirtualBox for the Domain Controller (Windows Server 2019).",
-      "pfSense firewall configuration interface.",
-      "Windows 10 domain client desktop.",
-      "Apache web server running on Ubuntu.",
-      "SMB file server directory view."
+    const allCaptions = [
+      ["VM list in VirtualBox showing the Active Directory/DNS server.",
+       "Active Directory Users and Computers snap-in.",
+       "DNS Manager interface for jeff.local zone.",
+       "System overview of the AD/DNS VM."],
+      ["Initial pfSense boot screen.",
+       "Web UI for pfSense firewall settings."],
+      ["Windows 10 domain client login.",
+       "Client VM joined to jeff.local domain."],
+      ["Apache index page on Ubuntu server.",
+       "Apache service status shown in terminal."],
+      ["Shared folders visible from Windows File Server.",
+       "Folder permissions and sharing properties."]
     ];
 
     function changeSlide(group, direction) {
@@ -178,14 +190,14 @@
       imgs[current[group]].classList.remove("active");
       current[group] = (current[group] + direction + imgs.length) % imgs.length;
       imgs[current[group]].classList.add("active");
+      document.getElementById(`caption-${group}`).textContent = allCaptions[group][current[group]];
     }
 
-    document.querySelectorAll('.slideshow-container').forEach((box, i) => {
-      const captionDiv = document.createElement("div");
-      captionDiv.className = "caption";
-      captionDiv.textContent = captions[i];
-      box.appendChild(captionDiv);
-    });
+    window.onload = () => {
+      for (let i = 0; i < groups.length; i++) {
+        document.getElementById(`caption-${i}`).textContent = allCaptions[i][0];
+      }
+    }
   </script>
 </body>
 </html>
