--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
         <div class="slideshow-container" id="ad">
           <button class="arrow left" onclick="changeSlide(0, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(0, 1)">&#10095;</button>
-          <img src="ADVMinfo.png" class="slide-img slide-0 active">
+          <img src="images/ADVMinfo.png" class="slide-img slide-0 active">
+          <img src="images/ADUC.png" class="slide-img slide-0">
+          <img src="images/DNSManager.png" class="slide-img slide-0">
           <img src="ad2.png" class="slide-img slide-0">
         </div>
         <div class="slideshow-container" id="pf" style="display:none">
