--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="slideshow-container" id="pf" style="display:none">
           <button class="arrow left" onclick="changeSlide(1, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(1, 1)">&#10095;</button>
-          <img src="pf1.png" class="slide-img slide-1 active">
+          <img src="images/pfsense.png" class="slide-img slide-1 active">
           <img src="pf2.png" class="slide-img slide-1">
         </div>
         <div class="slideshow-container" id="client" style="display:none">
