--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
           <button class="arrow left" onclick="changeSlide(1, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(1, 1)">&#10095;</button>
           <img src="images/pfsenserouter.png" class="slide-img slide-1 active">
+          <img src="images/pfsense_dashboard.png" class="slide-img slide-1 active">
+          <img src="images/pfsense_rules.png" class="slide-img slide-1 active">
+      
           <img src="pf2.png" class="slide-img slide-1">
         </div>
         <div class="slideshow-container" id="client" style="display:none">
