--- a/index.html
+++ b/index.html
@@ -193,8 +193,10 @@
         <div class="slideshow-container" id="client" style="display:none">
           <button class="arrow left" onclick="changeSlide(2, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(2, 1)">&#10095;</button>
-          <img src="client1.png" class="slide-img slide-2 active">
-          <img src="client2.png" class="slide-img slide-2">
+          <img src="images/Win10VM.png" class="slide-img slide-2 active">
+          <img src="Win10login.png" class="slide-img slide-2">
+          <img src="Win10Domain.png" class="slide-img slide-2">
+          <img src="PingDomain.png" class="slide-img slide-2">
         </div>
         <div class="slideshow-container" id="web" style="display:none">
           <button class="arrow left" onclick="changeSlide(3, -1)">&#10094;</button>
