--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
           <button class="arrow left" onclick="changeSlide(2, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(2, 1)">&#10095;</button>
           <img src="images/Win10VM.png" class="slide-img slide-2 active">
-          <img src="Win10login.png" class="slide-img slide-2">
-          <img src="Win10Domain.png" class="slide-img slide-2">
-          <img src="PingDomain.png" class="slide-img slide-2">
+          <img src="images/Win10login.png" class="slide-img slide-2">
+          <img src="images/Win10Domain.png" class="slide-img slide-2">
+          <img src="images/PingDomain.png" class="slide-img slide-2">
         </div>
         <div class="slideshow-container" id="web" style="display:none">
           <button class="arrow left" onclick="changeSlide(3, -1)">&#10094;</button>
