--- a/index.html
+++ b/index.html
@@ -146,15 +146,101 @@
     <p>Built on my HP Envy · Powered by VirtualBox</p>
   </header>
   <main>
-    <!-- content unchanged -->
+    <h2>My Virtual Lab Setup</h2>
+    <p>This lab simulates a professional enterprise network for testing and learning:</p>
+    <ul>
+      <li><strong>pfSense</strong> – Virtual firewall/router</li>
+      <li><strong>Active Directory</strong> – Domain Controller (jeff.local)</li>
+      <li><strong>Windows Client</strong> – Joined to AD domain</li>
+      <li><strong>Ubuntu Apache Server</strong> – Web server with HTML content</li>
+      <li><strong>File Server</strong> – Shares via SMB</li>
+    </ul>
+    <hr>
+    <h2>💻 Project Tabs</h2>
+    <div class="tabs">
+      <button class="tab-btn active" onclick="showTab('windows', event)">Windows Lab</button>
+      <button class="tab-btn" onclick="showTab('linux', event)">Linux Lab</button>
+      <button class="tab-btn" onclick="showTab('firewall', event)">Firewall Setup</button>
+    </div>
+    <div class="tab-content" id="windows">
+      <h3>Windows Environment Lab</h3>
+      <h2>📸 Lab Screenshots</h2>
+      <div class="tabs">
+        <button class="tab-btn active" onclick="showSlideshow('ad', event)">AD Server</button>
+        <button class="tab-btn" onclick="showSlideshow('pf', event)">pfSense</button>
+        <button class="tab-btn" onclick="showSlideshow('client', event)">Windows Client</button>
+        <button class="tab-btn" onclick="showSlideshow('web', event)">Web Server</button>
+        <button class="tab-btn" onclick="showSlideshow('file', event)">File Server</button>
+      </div>
+      <div id="slideshows">
+        <div class="slideshow-container" id="ad">
+          <button class="arrow left" onclick="changeSlide(0, -1)">&#10094;</button>
+          <button class="arrow right" onclick="changeSlide(0, 1)">&#10095;</button>
+          <img src="images/ADVMinfo.png" class="slide-img slide-0 active">
+          <img src="images/ADUC.png" class="slide-img slide-0">
+          <img src="images/DNSManager.png" class="slide-img slide-0">
+          <img src="images/DNS_ARecords.png" class="slide-img slide-0">
+        </div>
+        <div class="slideshow-container" id="pf" style="display:none">
+          <button class="arrow left" onclick="changeSlide(1, -1)">&#10094;</button>
+          <button class="arrow right" onclick="changeSlide(1, 1)">&#10095;</button>
+          <img src="images/Pfsense_virtualbox.png" class="slide-img slide-1 active">
+          <img src="images/pfsenserouter.png" class="slide-img slide-1">
+          <img src="images/pfsense_dashboard.png" class="slide-img slide-1">
+          <img src="images/pfsense_rules.png" class="slide-img slide-1">
+          <img src="images/pfsense_interfaces.png" class="slide-img slide-1">
+        </div>
+        <div class="slideshow-container" id="client" style="display:none">
+          <button class="arrow left" onclick="changeSlide(2, -1)">&#10094;</button>
+          <button class="arrow right" onclick="changeSlide(2, 1)">&#10095;</button>
+          <img src="images/Win10VM.png" class="slide-img slide-2 active">
+          <img src="images/Win10login.png" class="slide-img slide-2">
+          <img src="images/Win10Domain.png" class="slide-img slide-2">
+          <img src="images/PingDomain.png" class="slide-img slide-2">
+        </div>
+        <div class="slideshow-container" id="web" style="display:none">
+          <button class="arrow left" onclick="changeSlide(3, -1)">&#10094;</button>
+          <button class="arrow right" onclick="changeSlide(3, 1)">&#10095;</button>
+          <img src="web1.png" class="slide-img slide-3 active">
+          <img src="web2.png" class="slide-img slide-3">
+        </div>
+        <div class="slideshow-container" id="file" style="display:none">
+          <button class="arrow left" onclick="changeSlide(4, -1)">&#10094;</button>
+          <button class="arrow right" onclick="changeSlide(4, 1)">&#10095;</button>
+          <img src="file1.png" class="slide-img slide-4 active">
+          <img src="file2.png" class="slide-img slide-4">
+        </div>
+      </div>
+      <hr>
+      <h4>VM Resource Allocation</h4>
+      <table>
+        <thead>
+          <tr><th>VM Name</th><th>OS / Role</th><th>RAM (GB)</th><th>Storage (GB)</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>pfSense</td><td>Virtual firewall/router</td><td>1</td><td>10</td></tr>
+          <tr><td>Active Directory DC</td><td>Windows Server 2019 AD/DNS</td><td>4</td><td>60</td></tr>
+          <tr><td>Windows Client</td><td>Windows 10 domain client</td><td>4</td><td>40</td></tr>
+          <tr><td>Apache Web Server</td><td>Ubuntu + Apache</td><td>2</td><td>20</td></tr>
+          <tr><td>File Server</td><td>Windows Server (SMB Shares)</td><td>4</td><td>50</td></tr>
+        </tbody>
+      </table>
+      <hr>
+    </div>
+    <div class="tab-content" id="linux" style="display:none">
+      <h3>Linux Lab</h3>
+      <p>Linux network configurations and services will be detailed here.</p>
+    </div>
+    <div class="tab-content" id="firewall" style="display:none">
+      <h3>Firewall (pfSense)</h3>
+      <p>Firewall configuration and rules for network segmentation.</p>
+    </div>
   </main>
   <footer>
     &copy; 2025 Jeffrey Betancur · jeffbeta12.github.io
   </footer>
   <div id="imageModal" class="modal">
     <span class="close" onclick="closeModal()">&times;</span>
-    <button id="modalLeftArrow" class="arrow left">&#10094;</button>
-    <button id="modalRightArrow" class="arrow right">&#10095;</button>
     <img class="modal-content" id="modalImage">
   </div>
   <script>
@@ -184,53 +270,17 @@
       imgs[current[group]].classList.add("active");
     }
 
-    let modalGroupIndex = 0;
-    let modalImageIndex = 0;
-
-    document.querySelectorAll('.slide-img').forEach((img) => {
-      img.addEventListener('click', function () {
-        const classList = Array.from(img.classList);
-        const groupClass = classList.find(cls => cls.startsWith("slide-"));
-        modalGroupIndex = parseInt(groupClass.split("-")[1]);
-        const groupImgs = document.querySelectorAll(`.slide-${modalGroupIndex}`);
-        modalImageIndex = Array.from(groupImgs).indexOf(img);
-        showModalImage();
+    // Modal functionality
+    document.querySelectorAll('.slide-img').forEach(img => {
+      img.addEventListener('click', function() {
+        document.getElementById('modalImage').src = this.src;
         document.getElementById('imageModal').style.display = "block";
       });
     });
 
-    function showModalImage() {
-      const groupImgs = document.querySelectorAll(`.slide-${modalGroupIndex}`);
-      document.getElementById('modalImage').src = groupImgs[modalImageIndex].src;
-    }
-
     function closeModal() {
       document.getElementById('imageModal').style.display = "none";
     }
-
-    document.getElementById('modalLeftArrow').addEventListener('click', () => {
-      const groupImgs = document.querySelectorAll(`.slide-${modalGroupIndex}`);
-      modalImageIndex = (modalImageIndex - 1 + groupImgs.length) % groupImgs.length;
-      showModalImage();
-    });
-
-    document.getElementById('modalRightArrow').addEventListener('click', () => {
-      const groupImgs = document.querySelectorAll(`.slide-${modalGroupIndex}`);
-      modalImageIndex = (modalImageIndex + 1) % groupImgs.length;
-      showModalImage();
-    });
-
-    document.addEventListener('keydown', function(e) {
-      if (document.getElementById('imageModal').style.display === 'block') {
-        if (e.key === 'ArrowLeft') {
-          document.getElementById('modalLeftArrow').click();
-        } else if (e.key === 'ArrowRight') {
-          document.getElementById('modalRightArrow').click();
-        } else if (e.key === 'Escape') {
-          closeModal();
-        }
-      }
-    });
   </script>
 </body>
 </html>
