--- a/index.html
+++ b/index.html
@@ -201,8 +201,10 @@
         <div class="slideshow-container" id="web" style="display:none">
           <button class="arrow left" onclick="changeSlide(3, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(3, 1)">&#10095;</button>
-          <img src="web1.png" class="slide-img slide-3 active">
-          <img src="web2.png" class="slide-img slide-3">
+          <img src="images/Webserverinfo.png" class="slide-img slide-3 active">
+          <img src="images/Webserver1.png" class="slide-img slide-3>
+          <img src="images/PingServer.png" class="slide-img slide-3">
+          <img src="images/Testinghtml.png" class="slide-img slide-3">
         </div>
         <div class="slideshow-container" id="file" style="display:none">
           <button class="arrow left" onclick="changeSlide(4, -1)">&#10094;</button>
