--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <button class="arrow left" onclick="changeSlide(3, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(3, 1)">&#10095;</button>
           <img src="images/Webserverinfo.png" class="slide-img slide-3 active">
-          <img src="images/Webserver1.png" class="slide-img slide-3>
+          <img src="images/Webserver1.png" class="slide-img slide-3">
           <img src="images/PingServer.png" class="slide-img slide-3">
           <img src="images/Testinghtml.png" class="slide-img slide-3">
         </div>
