--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <img src="images/Webserverinfo.png" class="slide-img slide-3 active">
           <img src="images/Webserver1.png" class="slide-img slide-3">
           <img src="images/PingServer.png" class="slide-img slide-3">
-          <img src="images/Testinghtml.png" class="slide-img slide-3">
+          <img src="images/Tetsinghtml.png" class="slide-img slide-3">
         </div>
         <div class="slideshow-container" id="file" style="display:none">
           <button class="arrow left" onclick="changeSlide(4, -1)">&#10094;</button>
