--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <img src="images/ADVMinfo.png" class="slide-img slide-0 active">
           <img src="images/ADUC.png" class="slide-img slide-0">
           <img src="images/DNSManager.png" class="slide-img slide-0">
-          <img src="images/DNS_ARecords.png" class="slide-img slide-0">
+          <img src="images/ADUsers.png" class="slide-img slide-0">
         </div>
         <div class="slideshow-container" id="pf" style="display:none">
           <button class="arrow left" onclick="changeSlide(1, -1)">&#10094;</button>
