--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
           <img src="images/ADUC.png" class="slide-img slide-0">
           <img src="images/DNSManager.png" class="slide-img slide-0">
           <img src="images/ADUsers.png" class="slide-img slide-0">
+          <img src="images/Servmanager.png" class="slide-img slide-0">
         </div>
         <div class="slideshow-container" id="pf" style="display:none">
           <button class="arrow left" onclick="changeSlide(1, -1)">&#10094;</button>
