--- a/index.html
+++ b/index.html
@@ -210,8 +210,9 @@
         <div class="slideshow-container" id="file" style="display:none">
           <button class="arrow left" onclick="changeSlide(4, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(4, 1)">&#10095;</button>
-          <img src="file1.png" class="slide-img slide-4 active">
-          <img src="file2.png" class="slide-img slide-4">
+          <img src="images/Fileservinfo.png" class="slide-img slide-4 active">
+          <img src="images/Sharing.png" class="slide-img slide-4">
+          <img src="images/Computermgmt.png" class="slide-img slide-4">
         </div>
       </div>
       <hr>
